feat: make the L103 of product resourse compatable with java 11